# NoSpherA2

./: .gitignore  .gitmodules  AGENTS.md  AtomGrid.cpp  AtomGrid.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.targets  Faddeeva.cc  Faddeeva.h  HANDOFF.md  INVESTIGATION_STATUS.md  LICENSE  NoSpherA2.cpp  README.md  Thakkar_coefs.h  UNIT_TESTS_STATUS.md  atoms.h  azure-pipelines.yml  basis_set.cpp  basis_set.h  becke_partitioning.cpp  cell.h  convenience.cpp  convenience.h  coverage.runsettings  cube.cpp  cube.h  def2-ECPs.txt  environment-macos.yaml  environment.yaml  environment.yml  fchk.cpp  fchk.h  flake.nix  general.h  grid_radial.cpp  makefile  (+26 more)
Src/: AtomGrid.cpp  AtomGrid.h  CMakeLists.txt  CUDA_utilities.h  DLL_Helper.cpp  DLL_Helper.h  ECPs_corrections.cpp  ECPs_corrections.h  GridManager.cpp  GridManager.h  JKFit.cpp  JKFit.h  ML_density.cpp  ML_density.h  ML_predict.cpp  ML_predict.h  NNLS.cpp  NNLS.h  NoSpherA2.cpp  OpenBLAS.h  OpenBLAS.rc  SALTED.cpp  SALTED_equicomb.cpp  SALTED_equicomb.h  SALTED_io.cpp  SALTED_io.h  SALTED_math.cpp  SALTED_math.h  SALTED_predictor.cpp  SALTED_predictor.h  SALTED_utilities.cpp  SALTED_utilities.h  Thakkar_coefs.h  XCW.cpp  XCW.h  atoms.cpp  atoms.h  b2c.cpp  b2c.h  basis_set.cpp  (+73 more)
Src/basis_set_helper/: BasisSetConverter.cpp  CMakeLists.txt  basis_set_helper.cpp  basis_set_helper.h
Src/core/: AtomGrid.cpp  AtomGrid.h  CMakeLists.txt  GridManager.cpp  GridManager.h  NoSpherA2.cpp  NoSpherA2.h  SALTED_equicomb.cpp  SALTED_equicomb.h  SALTED_io.cpp  SALTED_predictor.cpp  SALTED_predictor.h  SALTED_utilities.cpp  SALTED_utilities.h  XCW.cpp  XCW.h  atoms.cpp  atoms.h  b2c.cpp  basis_set.cpp  basis_set.h  bondwise_analysis.cpp  bondwise_analysis.h  cell.cpp  cell.h  constants.h  convenience.cpp  convenience.h  cube.cpp  cube.h  fchk.h  integrator.cpp  integrator.h  libCintKernels.cpp  mat_nos_math.cpp  molecule.cpp  molecule.h  nos_math.cpp  nos_math.h  pch.h  (+13 more)
Src/dll/: CMakeLists.txt  api.cpp  api.h  framework.h  hirshfeld_api.cpp  hirshfeld_api.h
Src/occ/: CMakeLists.txt  OrbitalDefs.h  WfnAdapter.cpp  WfnAdapter.h  XCW.h  wfn_addapter.cpp  wfn_addapter.h
Src/tests/: CppUnitTest_shim.h  IntegrationTests.cpp  Tests.cpp  UnitTests.cpp  pch.h
app/: CMakeLists.txt  main.cpp
occ_integration_tests/: CMakeLists.txt  alanine.owf.fchk  alanine_saved.owf.fchk  compareWfns.cpp  compareWfns.h  comparingWFNs.cpp  convert.cpp  testingRandomOccFunctions.cpp  water.owf.fchk
tests/: CMakeLists.txt  makefile  runTest.py  run_test.py  tests.toml
tests/BasisSetConverter/: auxiliary_basis.hpp
tests/CASSCF/: water.inp
tests/Coeffs_From_ML/: cysteine_def2_qzvppd.npy  cysteine_ref.npy  cysteine_ref_Cysteine.npy  sucrose_ref.npy  sucrose_ref_Combined_v1.npy  sucrose_ref_Combined_v5.npy  test_cysteine.cif  test_cysteine.npy  test_sucrose.cif  test_sucrose.xyz
tests/ECP_SF/: Au2Br2.cif  Au_alle.inp  Au_alle_ZORA.inp  Au_alle_x2c.inp  Au_def2.inp  Co110.cif  Co110.hkl  Co110.inp  Co110_ECP.inp  Rb.gbw  Rb.inp  Rb4.inp  Rb_+9.inp  Rb_def2.inp  atom_dict.json  malbac.cif  malbac.hkl  malbac.inp  malbac.wfx  malbac_ECP.inp  malbac_ECP.molden  malbac_SF_ECP.good  visualize.py  visualize_ECP.py
tests/Fe_gbw/: Fe.cif  Fe.hkl
tests/Hybrid/: Hybrid_mode.good  ZP2.cif  ZP2_part1.gbw  ZP2_part2.gbw
tests/Lukas_Test/: dppmAu2Br2_fin.cif  temp_rascaline.xyz  thpp.cif  thpp_p1.xyz
tests/NiP3_fchk/: def2-TZVP  fchk_conversion.good
tests/OpenBLAS/: openBLAS.good
tests/P1_test/: NA2_000.wfn  NA2_001.wfn  NA2_002.wfn  P1_test.hkl  P1_test_NA2.cif  P1_test_XCW.good  P1_test_XCW_full.good  P1_test_XCW_h2.good  P1_test_XCW_h2_full.good  anom_disp.txt
tests/PBC_Test/: CaF_Ag3.ins  CaF_Ag3.res
tests/RGBI/: h2o.MO_energies,r  h2o.MOs,r  h2o.molecular_orbitals,restricted  h2o.orbital_energies,restricted  nh3li_ano.good  nh3li_nao.good  stdout
tests/RGBI_groups/: NH3BH3.good  NH3BH3_ano.good  NH3BH3_sym.good  NH3BH3_sym_ano.good  NH3Li.good  nh3bh3.gbw  nh3li.gbw  nh3li_ano.good
tests/RI_Test/: H2.bibtex  H2.densitiesinfo  H2.inp  H2.mkl  H2.property.txt  H2.xyz  NoSpherA2.good  RI_Test.good  TESTMOL.gbw  TESTMOL.inp  TESTMOL.mkl  TESTMOL.xyz  aux_basis.txt  combined.txt  eri2c_nospherA2.txt  eri3c_nospherA2.txt  normal_basis.txt
tests/RI_Test_2/: H2.gbw  eri2c_nospherA2.txt  eri3c_nospherA2.txt  sucrose.cif  temp_wavefunction.wfn
tests/SALTED/: 1EJG.cif  1EJG.xyz  Co110.cif  Co110.xyz  SALTED.good  fourier_transform.good  fourier_transform_full.good  reading_SALTED.good  temp_rascaline.xyz  test_cysteine.xyz
tests/SALTED_read_binary/: reading_binary.good
tests/TFVC/: HF.cif  HF.gbw  HF.xyz  Rh.cif  Rh.gbw  TFVC.good  TFVC_ECP.good  benzene.cif  ethane.cif  ethane.gbw  water.cif  water.gbw
tests/alanine_integrated_occ/: alanine.cif  alanine.toml  alanine_integrated_occ.good
tests/alanine_occ/: O.cif  O.inp  O.xyz  Zn.cif  Zn.inp  Zn.xyz  alanine.owf.fchk  alanine.xyz  alanine_occ.good  conv.py
tests/cytidine_tonto/: OH.cif  OH.molecular_orbitals,restricted  OH.orbital_energies,restricted  OH.wfn  OH_rad_uhf.molecular_orbitals,alpha  OH_rad_uhf.molecular_orbitals,beta  OH_rad_uhf.orbital_energies,alpha  OH_rad_uhf.orbital_energies,beta  custom  cyt.cif  cyt.molecular_orbitals,restricted  cyt.orbital_energies,restricted  cyt.wfn  def2-SVP  stdin  stdin_OH_rad  stdin_OH_rad_uhf  stdin_cyt  stdout  stdout_OH  stdout_OH_rad  stdout_OH_rad_uhf  stdout_cyt  test.py
tests/disorder/: disorder_THPP.good  temp_wavefunction.wfn  thpp.cif  thpp.hkl  thpp_ptb.cif  visualize_timings.py
tests/epoxide_gbw/: casscf.gbw  casscf.inp  epoxide.cif  epoxide.gbw  epoxide.hkl  epoxide.inp  epoxide_61.gbw  ri_fit.good  something.out
tests/grown/: experimental.tscb  grown_water.good  water.cif  water.hkl
tests/intermolecular_nci/: surrounding.xyz  unit.xyz
tests/isosurface/: asu.xyz  pack.xyz
tests/mohr_salt/: mohrs_salt.cif  mohrs_salt.gbw
tests/molden_file/: Ce_full.molden  Ce_full.wfn  Co2.cif  Co2.molden  F2.cif  F2.molden  F_full.molden  Sc_full.molden  Sc_full.wfn  epoxide.cif  epoxide.molden  f_ref.wfn  (+4 more)
(+555 files in other folders)
