if (MSVC)
    add_compile_options($<$<CONFIG:Release>:/MT> $<$<CONFIG:Debug>:/MTd>)
endif()
add_executable(randomocc testingRandomOccFunctions.cpp)
target_link_libraries(randomocc libnosphera2 occ::qm)
#target_link_options(convert PRIVATE "-fsanitize=address")
add_library(wfncompare compareWfns.cpp compareWfns.h)
target_link_libraries(wfncompare libnosphera2 occ::qm)
add_executable(convert convert.cpp)
target_link_libraries(convert libnosphera2 occ::qm wfncompare)
add_executable(comparing_wfns comparingWFNs.cpp)
target_link_libraries(comparing_wfns libnosphera2 occ::qm wfncompare)
